<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_filter_characters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp">

    <TextView
        android:id="@+id/tv_filter_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:includeFontPadding="false"
        android:text="@string/filter_characters"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_characters"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:alpha="0.9"
        android:includeFontPadding="false"
        android:text="@string/status"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btg_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_status"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintTop_toTopOf="@id/tv_status"
        app:singleSelection="true">

        <Button
            android:id="@+id/b_grid_alive"
            style="@style/ToggleButtonWithIcon"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/alive"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/b_grid_dead"
            style="@style/ToggleButtonWithIcon"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/dead"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/b_grid_status_unknown"
            style="@style/ToggleButtonWithIcon"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/unknown"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:alpha="0.9"
        android:includeFontPadding="false"
        android:text="@string/gender"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/btg_status" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/genders"
        android:popupBackground="@color/ship_gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_gender"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/btg_status"
        app:layout_constraintTop_toTopOf="@id/tv_gender" />

    <EditText
        android:id="@+id/et_species"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/species"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/et_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_gender"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_type"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/type"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_species"
        app:layout_constraintTop_toBottomOf="@id/spinner_gender"
        tools:ignore="Autofill" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_species">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_search"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/ship_gray"
            android:elevation="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:indicatorSize="32dp"
            app:trackThickness="3.5dp"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>