<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_filter_characters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp">

    <TextView
        android:id="@+id/tv_filter_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:includeFontPadding="false"
        android:text="@string/filter_characters"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_episode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/episode"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_search"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/ship_gray"
            android:elevation="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:indicatorSize="32dp"
            app:trackThickness="3.5dp"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>