<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charade">

    <include
        android:id="@+id/layout_app_bar_detail"
        layout="@layout/layout_app_bar_detail" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gunmetal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="32dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/DetailName"
                        android:layout_marginTop="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Name" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_episode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="32dp"
                        app:cardBackgroundColor="@color/ship_gray"
                        app:cardCornerRadius="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="16dp"
                            android:paddingBottom="20dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="24dp"
                                android:alpha="0.9"
                                android:gravity="start"
                                android:text="@string/episode"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_episode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="24dp"
                                android:layout_marginTop="8dp"
                                android:alpha="0.9"
                                android:gravity="start"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="episode value" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_air_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/ship_gray"
                        app:cardCornerRadius="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="16dp"
                            android:paddingBottom="20dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="24dp"
                                android:alpha="0.9"
                                android:gravity="start"
                                android:text="@string/air_date"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_air_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="24dp"
                                android:layout_marginTop="8dp"
                                android:alpha="0.9"
                                android:gravity="start"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="air date value" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="32dp"
                        app:cardBackgroundColor="@color/dark_gunmetal"
                        app:cardCornerRadius="16dp"
                        app:strokeColor="@color/teal"
                        app:strokeWidth="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/dark_gunmetal"
                            android:orientation="vertical"
                            android:paddingVertical="16dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="24dp"
                                android:alpha="0.9"
                                android:gravity="start"
                                android:text="@string/characters"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="16dp"
                                android:layout_marginVertical="8dp"
                                android:orientation="vertical">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/rv_characters"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:clipToPadding="false"
                                    android:orientation="vertical"
                                    android:overScrollMode="never"
                                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                                    app:spanCount="2"
                                    tools:itemCount="6"
                                    tools:listitem="@layout/item_character" />

                                <include
                                    android:id="@+id/second_load_state"
                                    layout="@layout/second_load_state"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include
            android:id="@+id/main_load_state"
            layout="@layout/main_load_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>